--- a/webPage/front-end/src/pages/Home.css
+++ b/webPage/front-end/src/pages/Home.css
@@ -1,9 +1,9 @@
 .home {
-    height: 100vh;
     background-color: #dbdbdb;
 }
 
 .header {
+    height: 15vh;
     width: 100%;
     display: flex;
     align-items: center;
@@ -16,6 +16,7 @@
 
 .header > p {
     font-size: 40px;
+    margin: 0;
 }
 
 .header > .disconnect {
@@ -24,10 +25,11 @@
 }
 
 .body {
+    min-height: calc(85vh - 50px - 1px);
     width: 100%;
     display: flex;
+    flex-direction: column;
     align-items: center;
-    justify-content: center;
 }
 
 .grid-container {
@@ -35,10 +37,17 @@
     display: flex;
     flex-direction: column;
     background-color: white;
+    margin-bottom: 20px;
+    border-radius: 10px;
 }
 
 .grid-header {
     display: flex;
+}
+
+.grid-header {
+    margin: 10px;
+    font-size: larger;
 }
 
 .grid-selector {
