--- a/webPage/front-end/src/pages/ComponentStats.css
+++ b/webPage/front-end/src/pages/ComponentStats.css
@@ -1,8 +1,62 @@
+.component-header {
+    position: relative;
+    width: 90%;
+    background-color: white;
+    margin-bottom: 20px;
+    border-radius: 10px;
+    padding: 20px;
+}
+
+.component-header > label {
+    font-size: larger
+}
+
+.component-header > input {
+    padding: 5px;
+    font-size: larger;
+    background-color: rgba(10, 10, 10, 0.2);
+}
+
+.component-header > input:not(:hover) {
+    border: none;
+}
+
+.component-header > button {
+    position: absolute;
+    font-size: larger;
+    right: 40px;
+    top: 50%;
+    padding: 5px;
+    transform: translate(0, -50%);
+    border: none;
+    border-radius: 4px;
+    box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.3);
+}
+
+.component-header > button:hover {
+    box-shadow: -1px -1px 0px 1px rgba(0, 0, 0, 0.3);
+}
+
+.component-selector {
+    display: flex;
+    background-color: white;
+    border-radius: 10px;
+    margin-bottom: 20px;
+    padding: 20px;
+    font-size: larger;
+}
+
+.component-selector > select {
+    margin-left: 10px;
+    font-size: large;
+}
+
 .readings-container {
     width: 100%;
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
+    margin-bottom: 20px;
 }
 
 .readings {
